--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1192,12 +1192,13 @@
                         </template>
 
                         <!-- Empty State (No Panes) -->
-                        <div x-show="layoutGroups.length === 0"
-                            class="flex flex-col items-center justify-center h-full w-full bg-gray-100 dark:bg-slate-900 transition-colors duration-200">
+                        <div x-show="layoutGroups.length === 0 && sessions.length > 0"
+                            class="flex-1 flex flex-col items-center justify-center bg-gray-100 dark:bg-slate-900 transition-colors duration-200">
                         </div>
+
                         <!-- Global Empty State -->
                         <div x-show="sessions.length === 0"
-                            class="flex flex-col items-center justify-center h-full w-full text-gray-500 dark:text-slate-500 bg-gray-100 dark:bg-slate-900 transition-colors duration-200">
+                            class="absolute inset-0 flex flex-col items-center justify-center text-gray-500 dark:text-slate-500 bg-gray-100 dark:bg-slate-900 transition-colors duration-200 z-10">
                             <svg class="w-16 h-16 mb-4 opacity-20" fill="none" stroke="currentColor"
                                 viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5"
@@ -1207,8 +1208,7 @@
                             <p class="text-xl font-medium">No Active Sessions</p>
                             <p class="text-sm mt-2">Connect in the <button @click="activeView = 'connection'"
                                     class="text-indigo-500 hover:text-indigo-600 font-medium">connection panel</button>
-                                to get
-                                started</p>
+                                to get started</p>
                         </div>
                     </div>
                 </div>
@@ -1418,6 +1418,122 @@
                                 class="px-5 py-2 bg-white dark:bg-slate-700 border border-gray-300 dark:border-slate-600 text-gray-700 dark:text-slate-200 rounded-lg text-sm font-bold hover:bg-gray-50 dark:hover:bg-slate-600 transition-all">
                                 Cancel
                             </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Welcome Modal -->
+            <div x-show="showWelcomeModal" class="fixed inset-0 z-[110] overflow-y-auto" x-cloak>
+                <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
+                    <div x-show="showWelcomeModal" x-transition:enter="ease-out duration-300"
+                        x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100"
+                        x-transition:leave="ease-in duration-200" x-transition:leave-start="opacity-100"
+                        x-transition:leave-end="opacity-0"
+                        class="fixed inset-0 transition-opacity bg-gray-900/80 backdrop-blur-md">
+                    </div>
+
+                    <div x-show="showWelcomeModal" x-transition:enter="ease-out duration-300"
+                        x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                        x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+                        x-transition:leave="ease-in duration-200"
+                        x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
+                        x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                        class="inline-block w-full max-w-lg overflow-hidden text-left align-bottom transition-all transform bg-white dark:bg-slate-800 rounded-2xl shadow-2xl sm:my-8 sm:align-middle">
+
+                        <div class="bg-indigo-600 px-6 py-8 text-center relative overflow-hidden">
+                            <!-- Background Decor -->
+                            <div class="absolute top-0 left-0 w-full h-full opacity-10 pointer-events-none">
+                                <svg class="w-full h-full" viewBox="0 0 100 100" preserveAspectRatio="none">
+                                    <path d="M0 100 C 20 0 50 0 100 100 Z" fill="white"></path>
+                                </svg>
+                            </div>
+
+                            <div class="relative z-10">
+                                <div
+                                    class="w-20 h-20 bg-white/20 backdrop-blur-sm rounded-2xl flex items-center justify-center shadow-xl mx-auto mb-4 border border-white/30">
+                                    <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor"
+                                        viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                            d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                                    </svg>
+                                </div>
+                                <h3 class="text-3xl font-black text-white tracking-tight">Welcome to ZDM</h3>
+                                <p class="text-indigo-100 mt-2 font-medium">Zephyr Device Manager</p>
+                            </div>
+                        </div>
+
+                        <div class="px-8 py-8">
+                            <div class="space-y-6">
+                                <div>
+                                    <h4
+                                        class="text-sm font-bold text-gray-900 dark:text-white uppercase tracking-wider mb-4 border-b border-gray-100 dark:border-slate-700 pb-2">
+                                        What can you do?</h4>
+                                    <div class="grid grid-cols-1 gap-4">
+                                        <div class="flex items-start gap-3">
+                                            <div
+                                                class="mt-1 flex-shrink-0 w-8 h-8 rounded-lg bg-emerald-100 dark:bg-emerald-500/20 flex items-center justify-center text-emerald-600 dark:text-emerald-400">
+                                                <svg class="w-5 h-5" fill="none" stroke="currentColor"
+                                                    viewBox="0 0 24 24">
+                                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                                        stroke-width="2"
+                                                        d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                                </svg>
+                                            </div>
+                                            <div>
+                                                <p class="text-sm font-bold text-gray-900 dark:text-white">Multi-Session
+                                                    Terminals</p>
+                                                <p class="text-xs text-gray-500 dark:text-slate-400">Connect to multiple
+                                                    devices simultaneously with a split-pane layout.</p>
+                                            </div>
+                                        </div>
+                                        <div class="flex items-start gap-3">
+                                            <div
+                                                class="mt-1 flex-shrink-0 w-8 h-8 rounded-lg bg-indigo-100 dark:bg-indigo-500/20 flex items-center justify-center text-indigo-600 dark:text-indigo-400">
+                                                <svg class="w-5 h-5" fill="none" stroke="currentColor"
+                                                    viewBox="0 0 24 24">
+                                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                                        stroke-width="2"
+                                                        d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                                                </svg>
+                                            </div>
+                                            <div>
+                                                <p class="text-sm font-bold text-gray-900 dark:text-white">Command
+                                                    Discovery</p>
+                                                <p class="text-xs text-gray-500 dark:text-slate-400">Automatically scan
+                                                    and group your Zephyr shell commands for quick access.</p>
+                                            </div>
+                                        </div>
+                                        <div class="flex items-start gap-3">
+                                            <div
+                                                class="mt-1 flex-shrink-0 w-8 h-8 rounded-lg bg-purple-100 dark:bg-purple-500/20 flex items-center justify-center text-purple-600 dark:text-purple-400">
+                                                <svg class="w-5 h-5" fill="none" stroke="currentColor"
+                                                    viewBox="0 0 24 24">
+                                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                                        stroke-width="2"
+                                                        d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                                </svg>
+                                            </div>
+                                            <div>
+                                                <p class="text-sm font-bold text-gray-900 dark:text-white">Repeat &
+                                                    Counters</p>
+                                                <p class="text-xs text-gray-500 dark:text-slate-400">Automate recurring
+                                                    commands and track log occurrences in real-time.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="mt-10">
+                                <button @click="closeWelcomeModal()"
+                                    class="w-full py-4 bg-indigo-600 hover:bg-indigo-700 text-white font-bold rounded-xl transition-all shadow-lg shadow-indigo-500/25 hover:scale-[1.02] active:scale-95 text-lg">
+                                    Let's Get Started
+                                </button>
+                                <p
+                                    class="text-center text-[10px] text-gray-400 dark:text-slate-500 mt-4 uppercase tracking-widest font-bold">
+                                    Pressing this will save your preference</p>
+                            </div>
                         </div>
                     </div>
                 </div>
