--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1267,18 +1267,60 @@
                                     </div>
                                 </div>
 
-                                <div x-show="statusMessage" class="p-2 rounded-md border text-xs"
-                                    :class="statusMessageType === 'error' ? 'bg-rose-900/30 border-rose-700 text-rose-300' : 'bg-emerald-900/30 border-emerald-700 text-emerald-300'">
+                                <!-- Logging Settings -->
+                                <div
+                                    class="bg-white dark:bg-slate-750 p-3 rounded-md border border-gray-200 dark:border-slate-700 shadow-sm transition-colors duration-200">
+                                    <label class="block text-xs font-semibold text-gray-700 dark:text-slate-300 mb-2">
+                                        Log file name:
+                                    </label>
+                                    <div class="flex space-x-2">
+                                        <input type="text" x-model="logFileName" placeholder="putty.log"
+                                            class="flex-1 px-2 py-1.5 bg-gray-50 dark:bg-slate-900 border border-gray-300 dark:border-slate-700 rounded text-xs text-gray-900 dark:text-slate-200 placeholder-gray-400 dark:placeholder-slate-500 focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-transparent font-mono">
+                                        <button @click="browseLogFile()"
+                                            class="px-3 py-1.5 bg-gray-200 dark:bg-slate-700 hover:bg-gray-300 dark:hover:bg-slate-600 rounded text-xs font-medium text-gray-600 dark:text-slate-300">
+                                            Browse...
+                                        </button>
+                                    </div>
+                                    <p class="text-[10px] text-gray-500 dark:text-slate-400 mt-2">
+                                        (Log file name can contain &Y, &M, &D for date, &T for time, &H for host name,
+                                        and &P for port number)
+                                    </p>
+                                </div>
+
+                                <div x-show="statusMessage" class="p-2 rounded-md border text-xs" :class="{
+                                        'bg-rose-900/30 border-rose-700 text-rose-300': statusMessageType === 'error',
+                                        'bg-amber-900/30 border-amber-700 text-amber-300': statusMessageType === 'warning',
+                                        'bg-emerald-900/30 border-emerald-700 text-emerald-300': statusMessageType === 'success',
+                                        'bg-indigo-900/30 border-indigo-700 text-indigo-300': statusMessageType === 'info' || !statusMessageType
+                                    }">
                                     <div class="flex items-start">
+                                        <!-- Error Icon -->
                                         <svg x-show="statusMessageType === 'error'" class="w-4 h-4 mr-1.5 flex-shrink-0"
                                             fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                 d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                                         </svg>
-                                        <svg x-show="statusMessageType !== 'error'" class="w-4 h-4 mr-1.5 flex-shrink-0"
-                                            fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <!-- Warning Icon -->
+                                        <svg x-show="statusMessageType === 'warning'"
+                                            class="w-4 h-4 mr-1.5 flex-shrink-0" fill="none" stroke="currentColor"
+                                            viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z">
+                                            </path>
+                                        </svg>
+                                        <!-- Success Icon -->
+                                        <svg x-show="statusMessageType === 'success'"
+                                            class="w-4 h-4 mr-1.5 flex-shrink-0" fill="none" stroke="currentColor"
+                                            viewBox="0 0 24 24">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                 d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                        </svg>
+                                        <!-- Info Icon -->
+                                        <svg x-show="statusMessageType === 'info' || !statusMessageType"
+                                            class="w-4 h-4 mr-1.5 flex-shrink-0" fill="none" stroke="currentColor"
+                                            viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                                         </svg>
                                         <span class="font-medium" x-text="statusMessage"></span>
                                     </div>
