--- a/frontend/index.html
+++ b/frontend/index.html
@@ -524,7 +524,7 @@
                                                 <button @click.stop="quickExecuteCommand(cmd)"
                                                     class="p-1 text-emerald-500 hover:bg-emerald-50 dark:hover:bg-emerald-500/10 rounded transition-colors"
                                                     title="Execute">
-                                                    <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor"
+                                                    <svg class="w-4.5 h-4.5" fill="none" stroke="currentColor"
                                                         viewBox="0 0 24 24">
                                                         <path stroke-linecap="round" stroke-linejoin="round"
                                                             stroke-width="2"
@@ -550,7 +550,7 @@
                                                 <div class="grid grid-cols-4 gap-1.5">
                                                     <button @click="quickExecuteCommand(cmd)"
                                                         class="flex flex-col items-center justify-center p-1.5 rounded-lg bg-emerald-50 dark:bg-emerald-500/10 text-emerald-600 dark:text-emerald-400 hover:bg-emerald-100 dark:hover:bg-emerald-500/20 transition-colors border border-emerald-100 dark:border-emerald-500/20">
-                                                        <svg class="w-3.5 h-3.5 mb-0.5" fill="none"
+                                                        <svg class="w-4.5 h-4.5 mb-0.5" fill="none"
                                                             stroke="currentColor" viewBox="0 0 24 24">
                                                             <path stroke-linecap="round" stroke-linejoin="round"
                                                                 stroke-width="2"
@@ -677,7 +677,7 @@
                                     <div class="flex gap-2">
                                         <button @click="executeCommand(selectedCommand)"
                                             class="flex-1 inline-flex items-center justify-center px-3 py-2 bg-gradient-to-r from-emerald-500 to-teal-500 hover:from-emerald-600 hover:to-teal-600 text-white font-semibold rounded-md shadow-sm text-xs">
-                                            <svg class="w-3 h-3 mr-1.5" fill="none" stroke="currentColor"
+                                            <svg class="w-4 h-4 mr-1.5" fill="none" stroke="currentColor"
                                                 viewBox="0 0 24 24">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                     d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z">
@@ -713,7 +713,8 @@
                                             d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15">
                                         </path>
                                     </svg>
-                                    <span x-text="loadingCommands ? 'Rescanning...' : 'Rescan'"></span>
+                                    <span
+                                        x-text="loadingCommands ? (discoveryProgress.total > 0 ? ('Discovering ' + discoveryProgress.current + '/' + discoveryProgress.total + ' (' + Math.round((discoveryProgress.current / discoveryProgress.total) * 100) + '%)') : 'Scanning...') : 'Rescan'"></span>
                                 </button>
                             </div>
 
