--- a/frontend/index.html
+++ b/frontend/index.html
@@ -522,14 +522,12 @@
 
                                                 <!-- Quick Execute -->
                                                 <button @click.stop="quickExecuteCommand(cmd)"
-                                                    class="p-1 text-emerald-500 hover:bg-emerald-50 dark:hover:bg-emerald-500/10 rounded transition-colors"
+                                                    class="p-1 text-emerald-500 hover:bg-emerald-500/10 rounded transition-colors"
                                                     title="Execute">
-                                                    <svg class="w-4.5 h-4.5" fill="none" stroke="currentColor"
-                                                        viewBox="0 0 24 24">
-                                                        <path stroke-linecap="round" stroke-linejoin="round"
-                                                            stroke-width="2"
-                                                            d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z">
-                                                        </path>
+                                                    <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor"
+                                                        stroke-width="2.5" stroke-linecap="round"
+                                                        stroke-linejoin="round" viewBox="0 0 24 24">
+                                                        <polygon points="6 4 20 12 6 20 6 4"></polygon>
                                                     </svg>
                                                 </button>
                                             </div>
@@ -550,12 +548,10 @@
                                                 <div class="grid grid-cols-4 gap-1.5">
                                                     <button @click="quickExecuteCommand(cmd)"
                                                         class="flex flex-col items-center justify-center p-1.5 rounded-lg bg-emerald-50 dark:bg-emerald-500/10 text-emerald-600 dark:text-emerald-400 hover:bg-emerald-100 dark:hover:bg-emerald-500/20 transition-colors border border-emerald-100 dark:border-emerald-500/20">
-                                                        <svg class="w-4.5 h-4.5 mb-0.5" fill="none"
-                                                            stroke="currentColor" viewBox="0 0 24 24">
-                                                            <path stroke-linecap="round" stroke-linejoin="round"
-                                                                stroke-width="2"
-                                                                d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z">
-                                                            </path>
+                                                        <svg class="w-3.5 h-3.5 mb-1" fill="none" stroke="currentColor"
+                                                            stroke-width="2.5" stroke-linecap="round"
+                                                            stroke-linejoin="round" viewBox="0 0 24 24">
+                                                            <polygon points="6 4 20 12 6 20 6 4"></polygon>
                                                         </svg>
                                                         <span
                                                             class="text-[8px] font-bold uppercase tracking-wider">Send</span>
@@ -675,17 +671,12 @@
                                     </div>
 
                                     <div class="flex gap-2">
-                                        <button @click="executeCommand(selectedCommand)"
-                                            class="flex-1 inline-flex items-center justify-center px-3 py-2 bg-gradient-to-r from-emerald-500 to-teal-500 hover:from-emerald-600 hover:to-teal-600 text-white font-semibold rounded-md shadow-sm text-xs">
-                                            <svg class="w-4 h-4 mr-1.5" fill="none" stroke="currentColor"
-                                                viewBox="0 0 24 24">
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                    d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z">
-                                                </path>
-                                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                    d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
-                                            </svg>
-                                            Execute
+                                        <svg class="w-3.5 h-3.5 mr-1.5" fill="none" stroke="currentColor"
+                                            stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"
+                                            viewBox="0 0 24 24">
+                                            <polygon points="6 4 20 12 6 20 6 4"></polygon>
+                                        </svg>
+                                        Execute
                                         </button>
                                         <button @click="selectedCommand = null"
                                             class="px-3 py-2 bg-gray-200 dark:bg-slate-700 hover:bg-gray-300 dark:hover:bg-slate-600 text-gray-700 dark:text-slate-300 font-medium rounded-md text-xs">
