--- a/frontend/index.html
+++ b/frontend/index.html
@@ -361,6 +361,27 @@
                                         </svg>
                                     </button>
                                 </div>
+
+                                <!-- Search Bar -->
+                                <div class="mt-3 relative">
+                                    <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+                                        <svg class="h-4 w-4 text-gray-400 dark:text-slate-500" fill="none"
+                                            stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                                        </svg>
+                                    </div>
+                                    <input type="text" placeholder="Search commands..." x-model="searchCommands"
+                                        class="block w-full pl-9 pr-10 py-1.5 border border-gray-200 dark:border-slate-700 rounded-md leading-5 bg-white dark:bg-slate-900/50 text-gray-900 dark:text-slate-200 placeholder-gray-500 dark:placeholder-slate-500 focus:outline-none focus:ring-1 focus:ring-indigo-500 focus:border-indigo-500 sm:text-xs transition-colors duration-200">
+                                    <div x-show="searchCommands"
+                                        class="absolute inset-y-0 right-0 pr-3 flex items-center cursor-pointer text-gray-400 hover:text-gray-600 dark:hover:text-slate-300 transition-colors"
+                                        @click="searchCommands = ''">
+                                        <svg class="h-4 w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                                d="M6 18L18 6M6 6l12 12"></path>
+                                        </svg>
+                                    </div>
+                                </div>
                                 <!-- Discovery progress -->
                                 <div x-show="discoveryProgress.total > 0 && discoveryProgress.current < discoveryProgress.total"
                                     class="mt-2">
@@ -454,7 +475,10 @@
                                     class="space-y-1 relative" @dragover.prevent=""
                                     @dragend.window="draggedCommandId = null; dragOverCommandId = null"
                                     @dragleave.self="dragOverCommandId = null">
-                                    <template x-for="(cmd, index) in commands"
+                                    <template
+                                        x-for="(cmd, index) in commands.filter(c => !searchCommands || 
+                                        (c.fullName || c.name || '').toLowerCase().includes(searchCommands.toLowerCase()) || 
+                                        (c.description && c.description.toLowerCase().includes(searchCommands.toLowerCase())))"
                                         :key="(cmd.id || cmd.fullName || cmd.name) + '_' + index">
                                         <div class="border border-gray-200 dark:border-slate-700 rounded-lg bg-white dark:bg-slate-750/50 transition-all duration-300 relative group"
                                             :class="{
@@ -521,8 +545,8 @@
                                                 </div>
 
                                                 <!-- Quick Execute -->
-                                                <button @click.stop="quickExecuteCommand(cmd)"
-                                                    class="p-1.5 text-emerald-500 hover:bg-emerald-500/10 rounded-md transition-all duration-200"
+                                                <button @click.stop="quickExecuteCommand(cmd)" :disabled="!connected"
+                                                    class="p-1.5 text-emerald-500 hover:bg-emerald-500/10 disabled:opacity-30 disabled:grayscale disabled:cursor-not-allowed rounded-md transition-all duration-200"
                                                     title="Execute">
                                                     <svg class="w-3.5 h-3.5" fill="none" stroke="currentColor"
                                                         stroke-width="2.5" stroke-linecap="round"
@@ -546,8 +570,8 @@
 
                                                 <!-- Action Buttons Grid -->
                                                 <div class="grid grid-cols-4 gap-1.5">
-                                                    <button @click="quickExecuteCommand(cmd)"
-                                                        class="flex flex-col items-center justify-center p-1.5 rounded-lg bg-emerald-50 dark:bg-emerald-500/10 text-emerald-600 dark:text-emerald-400 hover:bg-emerald-100 dark:hover:bg-emerald-500/20 transition-colors border border-emerald-100 dark:border-emerald-500/20">
+                                                    <button @click="quickExecuteCommand(cmd)" :disabled="!connected"
+                                                        class="flex flex-col items-center justify-center p-1.5 rounded-lg bg-emerald-50 dark:bg-emerald-500/10 text-emerald-600 dark:text-emerald-400 hover:bg-emerald-100 dark:hover:bg-emerald-500/20 disabled:opacity-50 disabled:grayscale disabled:cursor-not-allowed transition-colors border border-emerald-100 dark:border-emerald-500/20">
                                                         <svg class="w-3.5 h-3.5 mb-1" fill="none" stroke="currentColor"
                                                             stroke-width="2.5" stroke-linecap="round"
                                                             stroke-linejoin="round" viewBox="0 0 24 24">
@@ -671,8 +695,8 @@
                                     </div>
 
                                     <div class="flex gap-2">
-                                        <button @click="executeCommand(selectedCommand)"
-                                            class="flex-1 inline-flex items-center justify-center px-3 py-2 bg-gradient-to-r from-emerald-500 to-teal-500 hover:from-emerald-600 hover:to-teal-600 text-white font-semibold rounded-md shadow-sm text-xs">
+                                        <button @click="executeCommand(selectedCommand)" :disabled="!connected"
+                                            class="flex-1 inline-flex items-center justify-center px-3 py-2 bg-gradient-to-r from-emerald-500 to-teal-500 hover:from-emerald-600 hover:to-teal-600 disabled:opacity-50 disabled:grayscale disabled:cursor-not-allowed text-white font-semibold rounded-md shadow-sm text-xs transition-all duration-200">
                                             <svg class="w-3.5 h-3.5 mr-1.5" fill="none" stroke="currentColor"
                                                 stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"
                                                 viewBox="0 0 24 24">
@@ -698,7 +722,7 @@
                             <!-- Rescan Button -->
                             <div class="border-t border-gray-200 dark:border-slate-700 p-3">
                                 <button @click="scanCommands(true)"
-                                    class="w-full inline-flex items-center justify-center px-3 py-2 bg-gradient-to-r from-indigo-500 to-purple-500 hover:from-indigo-600 hover:to-purple-600 disabled:from-slate-700 disabled:to-slate-700 text-white font-semibold rounded-md shadow-sm text-xs"
+                                    class="w-full inline-flex items-center justify-center px-3 py-2 bg-gradient-to-r from-indigo-500 to-purple-500 hover:from-indigo-600 hover:to-purple-600 disabled:opacity-50 disabled:grayscale disabled:cursor-not-allowed text-white font-semibold rounded-md shadow-sm text-xs transition-all duration-200"
                                     :disabled="!connected || loadingCommands">
                                     <svg class="w-3 h-3 mr-1.5" :class="loadingCommands ? 'animate-spin' : ''"
                                         fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -919,8 +943,9 @@
 
                                 <div class="space-y-1 relative"
                                     @dragend.window="draggedSequenceId = null; dragOverSequenceId = null">
-                                    <template
-                                        x-for="(seq, index) in responseSequences.filter(s => !searchSequences || s.trigger.toLowerCase().includes(searchSequences.toLowerCase()) || s.command.toLowerCase().includes(searchSequences.toLowerCase()))"
+                                    <template x-for="(seq, index) in responseSequences.filter(s => !searchSequences || 
+                                        (s.trigger || '').toLowerCase().includes(searchSequences.toLowerCase()) || 
+                                        (s.command || '').toLowerCase().includes(searchSequences.toLowerCase()))"
                                         :key="seq.id || index">
                                         <div class="border border-gray-200 dark:border-slate-700 rounded-lg bg-white dark:bg-slate-750/50 transition-all duration-300 relative group"
                                             :class="{
